nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-deployment
  template:
    metadata:
      labels:
        app: nginx-deployment
    spec:
      containers:
      - name: nginx
        image: nginx:1.26.2
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "512Mi"     # Minimum memory the container will request
            cpu: "250m"         # Minimum CPU the container will request (250 millicores)
          limits:
            memory: "1Gi"       # Maximum memory the container can use
            cpu: "500m"         # Maximum CPU the container can use (500 millicores)
